Fix Portfolio Padding on Mobile Devices

--- a/browser/styles/portfolio.styl
+++ b/browser/styles/portfolio.styl
@@ -32,6 +32,8 @@ mBorderRadius = 2px
     width 100% // I don't know why this needs to be 100% and not 100vw ...
     max-width 1440px
     margin 1.5rem auto
+    padding-top 0.25rem
+    padding-bottom 0.25rem
     @media only screen and (min-width: mMobileWidth)
         margin 0rem auto
         padding 1rem
